-Fixing alignment of social icons and user controls regarding the line that crosses in the middle. -Rewriting the about me text for more relevant information.

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,7 @@ ul {
 a {
   text-decoration-color: rgba(176, 90, 122, 1); /* primary.darker */
 }
+
+p {
+  margin: 0;
+}
